--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     <th><h1>Немного обо мне</h1>
                     <h3>На картинке вы можете увидеть мою кошку)</h3>
                     <h2>Меня зовут Диана, мне 17 лет и я из города Москва.</h2></th>
-                    <th><img src="C:\Users\Student\Downloads\photo_5463196923499507733_y.jpg" width="50%" alt="ошибка"></th></tr>
+                    <th><img src="photo_5463196923499507733_y.jpg" width="50%" alt="ошибка"></th></tr>
                     </table>
             <h1 align="center">Мои хобби</h1>
             <ul>
@@ -25,9 +25,9 @@
             </ul>
             <table width="100%" cellpadding="3">
                 <tr>
-                    <th><img src="C:\Users\Student\Downloads\музыка.jpg" width="50%" alt="ошибка"></th>
-                    <th><img src="C:\Users\Student\Downloads\путешествие.jpg" width="50%" alt="ошибка"></th>
-                    <th><img src="C:\Users\Student\Downloads\рисование.jpg" width="50%" alt="ошибка"></th>
+                    <th><img src="музыка.jpg" width="50%" alt="ошибка"></th>
+                    <th><img src="путешествие.jpg" width="50%" alt="ошибка"></th>
+                    <th><img src="рисование.jpg" width="50%" alt="ошибка"></th>
                 </tr>
             </table>
             <table width="100%" cellpadding="3">
